[package]
name = "otp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha1 = "0.10.1"
rand = "*"
data-encoding = "2.3.2"
clap = { version = "3.1.6", features = ["cargo", "derive"] }
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
dirs = "4.0.0"
rust-argon2 = "1.0"
chacha20poly1305 = "0.9.0"

[[bin]]
path = "src/main.rs"
name = "hotp"